-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.761 2010-07-09 00:21:22 guru Exp $
-----------------------------------------------------------------------------------------

-----------------------------------------------------------------------------------------
2010-07-15	pwessel
	* GMT 4.5.3 finalized and released
-----------------------------------------------------------------------------------------
2010-07-08	pwessel
	* ex13:			Used -G2i/10 which is a syntax from pre-GMT 4.  Changed to -Gd2i.
	* explain_contlabel.txt: Did not fully describe the -Gd label option, including the
				fractional part.
	* gmt_support.c:	Now complains if -Gd<dist>[/<frac>] finds frac outside 0-1.

2010-07-05	jluis
	* ps2raster.c:		Also converts ps files with headers but no image. Now it will
				create a 1x1 raster instead of aborting with an error message.

2010-06-29	pwessel
	* grdcontour.c:		Placement of H and L annotations improved by using centroids

2010-06-28	pwessel
	* mapproject.c:		Applied scaling to -C/dx/dy when -Fk was used, despite docs
				saying -C is in meters when -F is used. Fixed, and clarified
				docs/man to say with -F, -C is always in meters.
	* gmt_io.c:		Added GMT_IS_DIMENSION for converting input dimensions which
				may have a suffix unit (e.g., 3.5c).  This can occur in the
				input to psxy[z], which sometimes complained about bad input.
	* psxy[z].c:		Better handling of dimensions with units passed via columns
				in the data file, as in psxy.

2010-06-25	pwessel
	* gmt_io.c:		GMT_fgets now checks for input record truncation and handles
				this gracefully (gives warning and winds to next record).

2010-06-24	pwessel
	* nearneighbor.c:	Did not handle periodic x input when -fg was used
	* grdmask.c:		Did not handle periodic x input when -fg was used
	* psmask.c:		Did not handle periodic x input when -fg was used
	* surface.c:		Did not handle periodic x input when -fg was used
